--- a/7前端工程化.md
+++ b/7前端工程化.md
@@ -1,2 +1,45 @@
 # 🧰 前端工程化
 ---
+## 前端工程化（框架）
+
+将前端开发过程中一系列`流程`和`工具`进行`规范化`，并使用相关技术实现`自动化` | 提高`开发效率` 提高`代码质量`和`可维护性`
+
+1. `项目初始化` 快速建立可维护项目的基础结构
+    - 包管理工具：`npm` `yarn` `pnpm`
+    - 脚手架工具：`create-react-app` `vue-cli`
+2. `模块化/组件化开发` 结构清晰、可复用、易维护
+    - 模块化规范：`CommonJS`(Node.js中使用) `ES Module`
+    - 组件化框架：`React` `Vue` `Svelte` `Solid.js`
+3. `构建与打包` 将代码编译、优化成可在生产环境运行的资源
+    - 构建工具：`Webpack` `Vite` `Rollup` `Esbuild`
+4. `代码规范与质量` 保证团队协作代码风格统一、减少潜在错误
+    - 代码规范检查：`ESLint` `Prettier` `Stylelint`
+    - 类型检查：`TypeScript` `Flow`
+    - 代码提交规范：`Git Hooks` `Commit message`
+---
+## Node.js 在前端工程化中的作用
+`1 运行环境` `2 工具支撑` `3 开发体验提升`
+1. 工具链的运行环境
+    - 以前浏览器之外，`JavaScript` 是没法直接运行的，`Node.js` 让我们可以在`本地直接执行 JavaScript`，这意味着：
+    - 前端构建工具（Webpack/Vite/Rollup）都能在本地跑
+    - 脚手架（如 `create-react-app`、`vue-cli`）能直接生成项目
+2. 模块化与包管理 工具链的依赖环境
+    - 包管理器（npm / yarn / pnpm）依赖 Node.js、
+    - 构建工具（Webpack、Rollup、Vite）运行在 Node.js 环境
+    - Lint / 格式化工具（ESLint、Prettier）也是 Node.js 脚本
+    - 允许前端代码通过`require`或`import`引入第三方库
+3. 本地开发服务器与代理
+    - Node.js 自带`网络模块（http）`，可以很方便地启动本地开发服务：
+    - 热更新（HMR）依赖 Node.js 服务器来推送变更
+    - API Mock（接口模拟）可直接用 Node.js 写本地接口
+    - 前后端同构渲染（SSR）直接用 Node.js 处理 HTML 模板
+    - 解决跨域问题时，常用`Node.js`中间件（如 `http-proxy-middleware`）做请求转发。
+4. 自动化脚本与工具开发
+    - 批量构建多个项目
+    - CI/CD 脚本（部署、构建、运行测试）
+    - 文件监听（用 `chokidar` 等库）
+    - 脚本工具化（用 `commander` 写 CLI 工具）
+    - 开发自定义 CLI 工具（如生成模板代码、批量处理文件）
+5. 跨平台开发支持
+    - Node.js 的跨平台能力（Windows / macOS / Linux 都能跑）
+---
