--- a/8用到的库和工具.md
+++ b/8用到的库和工具.md
@@ -1,2 +1,10 @@
 # 📦 用到的库和工具
 ---
+- React Router
+- classnames
+- styled-components
+- react-transition-group
+- pinia
+- axios
+- CesiumJS
+- ElementPlus
