--- a/1计算机网络相关.md
+++ b/1计算机网络相关.md
@@ -10,7 +10,7 @@
 * `TCP（Transmission Control Protocol 传输控制协议）`传输层协议，确保数据可靠、有序地传输（HTTP/HTTPS 均依赖 TCP）
 `IP（Internet Protocol 网际协议） 网络层协议`，负责数据包的路由和寻址（如 IP 地址）
 ---
-## HTML/1.1 和 HTML/2
+## HTTP/1.1 和 HTTP/2
 `超文本传输协议` 万维网的基础通信协议
 - `0.9` 第一个协议版本 简单的网页传输 仅支持 GET 请求 明文 单向
 - `1.0` 开始支持复杂的应用场景 引入 `HTTP头部` 增加`状态码` 每次请求都重新建立 `TCP连接` 传输完成后关闭
@@ -57,6 +57,7 @@ HTTP Request Methods ：`客户端 => 服务器` 发送请求时操作指令
 ## WebSocket
 `全双工通信协议` 允许客户端与服务器建立持久连接 双向实时数据交换 一次握手长期保持连接（除非主动关闭）｜本质上是运行在`应用层`
 * 底层传输依赖 TCP`(传输层)` 、是 HTTP 的补充
+* HTTP: 短连接 单向 ｜WebSocket: 长连接 双向
 * 1 握手阶段：通过 http 协议发起 客户端发起升级请求 服务器同意升级后返回 101 `Sec-WebSocket-Key（客）`和 `Sec-WebSocket-Accept（服）`用于验证握手
 * 2 数据传输阶段：握手完成 数据以`帧`的形式传输
   * 文本帧（UTF-8） ｜ 二进制帧（图片/音频等） ｜ 控制帧（管理连接）
