--- a/1计算机网络相关.md
+++ b/1计算机网络相关.md
@@ -105,4 +105,6 @@ TCP 是全双工的，两个方向各自独立关闭，需要各自 `FIN`/`ACK` 
 - `第四次挥手` 客户端收到服务器的`连接释放报文`后，必须发出确认，ACK=1，ack=w+1，而自己的序列号是seq=u+1，此时，客户端就进入了`TIME-WAIT 时间等待状态`，但此时TCP连接还未终止，必须要经过2MSL后（最长报文寿命），当`客户端撤销相应的TCB`后，客户端才会进入`CLOSED关闭状态`，服务器端接收到`确认报文`后，会立即进入`CLOSED关闭状态`，到这里TCP连接就断开了，四次挥手完成
   - 为什么客户端要等待`2MSL`？:主要原因是为了保证客户端发送那个的`第一个ACK报文能到到服务器`，因为这个ACK报文可能丢失，并且2MSL是任何报文在网络上存在的最长时间，超过这个时间报文将被丢弃，这样新的连接中不会出现旧连接的请求报文
 ---
+## Cookie Session Token｜HTTP协议层的状态管理与认证机制
+---
 ## 对浏览器内核的理解
