--- a/1计算机网络相关.md
+++ b/1计算机网络相关.md
@@ -106,5 +106,31 @@ TCP 是全双工的，两个方向各自独立关闭，需要各自 `FIN`/`ACK` 
   - 为什么客户端要等待`2MSL`？:主要原因是为了保证客户端发送那个的`第一个ACK报文能到到服务器`，因为这个ACK报文可能丢失，并且2MSL是任何报文在网络上存在的最长时间，超过这个时间报文将被丢弃，这样新的连接中不会出现旧连接的请求报文
 ---
 ## Cookie Session Token｜HTTP协议层的状态管理与认证机制
+Web 应用中，用户的`认证和鉴权`是非常重要的一环；`HTTP` 是一个`无状态的协议` => 一次请求结束后，下次在发送服务器就不知道这个请求是谁发来的了（`同一个 IP 不代表同一个用户`）=> 无法确定本次请求和上一次请求是不是同一个人发送的
+
+`Http会话保持`是Web开发中常用的技术，用来跟踪用户的整个会话。以前Web网站早期常用的会话保持技术是`Session和Cookie机制`，现在的Web网站和移动端可以通用`Token机制`
+1. 基于 `Session` 和 `Cookie` 的会话管理机制
+   - **`Cookie`** : 浏览器保存的一小段键值对，随请求自动携带到相同域名
+   - 客户端首次访问：验证账户密码
+   - 服务端验证后：响应+设置Cookie ｜ 一小段键值对
+   - 浏览器保存Cookie到本地
+   - 客户端再次访问时: 自动携带Cookie
+   - 弊端：安全风险 可篡改（服务器设置 `HttpOnly` 的 Cookie 不能被 JS 改）｜存储限制 4kb左右｜数量限制 每个域名几十个
+   - **`Session`** : 将用户状态信息存储在服务器里 再发一个Session ID到客户端浏览器
+   - 客户端首次访问：验证账户密码 无`Session`
+   - 服务端验证后：生成新Session存储 响应+设置Cookie（SessionID=S_123）
+   - 客户端下次请求 携带Cookie
+   - 弊端：占用大量的服务器资源｜创建 Session 的服务器可能不是验证 Session 的服务器｜Cookie跨域限制｜移动端App（大部份）没有Cookie
+2. 基于 `Token` 的会话管理机制
+   - 客户端首次访问：验证账户密码
+   - 服务端验证后：生成`Token`返回给客户端 用js将其存储在`Cookie 或 LocalStorage`（Token 通常由接口返回在响应体里，需要 JS 自己决定存放位置）
+   - 客户端保存 Token，访问需要认证的接口时在 `URL 参数`或 `HTTP Header` 中加入 Token
+   - 服务端通过解码 Token 进行鉴权
+     - `JWT（JSON Web Token）`：一种 Token 格式标准，由 IETF RFC 7519 定义
+     - 结构三部份：header.payload.signature
+     - header：算法、类型 ｜ payload：数据（用户ID、过期时间等）｜ signature：签名，防篡改
+     - `Authorization`（认证/授权）是 `HTTP请求头部（Header）`中的一个字段，常用于携带用户凭证信息
+     - `access_token（短期）`：避免泄露风险（即使被盗，几分钟后也过期了）｜ 每次 API 请求都要带
+     - `refresh_token（长期）`：只在 access_token 过期时使用，换取新的 access_token ｜ 存储在安全的位置，不随请求频繁发送
 ---
-## 对浏览器内核的理解
+
