--- a/9用到的库和工具.md
+++ b/9用到的库和工具.md
@@ -11,3 +11,13 @@
 - antd
 - normalize.css
 - react-router-dom
+- electron
+- Electron？（跨平台桌面应用开发框架）
+
+Electron = Chromium (Blink+V8) + Node.js (V8+libuv)。
+
+它既有 渲染引擎（渲染页面 UI），也有 Node.js 的底层能力（文件系统、进程管理）。
+
+所以你可以在 Electron 里同时用前端技术（HTML/CSS/JS）和 Node.js API。
+
+Electron 其实就是把 浏览器内核 + Node.js 拼在一起，做成桌面应用运行时
