--- a/10用到的库和工具.md
+++ b/10用到的库和工具.md
@@ -1,6 +1,167 @@
-# 📦 用到的库和工具
+# 📦 用到的插件和工具等
 ---
-- React Router
+## pinia
+- `Pinia` 是 `Vue.js` 的官方状态管理库（相当于 `Vuex` 的“继任者”）
+- 【 全局的状态中心，把数据统一存放和管理，让任何组件都能方便地读取或修改 】
+- `轻量`：API 简洁，没有 Vuex 冗余的 mutation 概念。
+- `模块化`：每个 `store` 都是独立的（而不是像 Vuex 那样集中在一个大 store 里）。
+- `支持组合式 API`：可以和 Vue3 的 `<script setup>`、`setup()` 等自然结合。
+- `类型推导友好`：原生支持 `TypeScript`，智能提示比 Vuex 好很多。
+- `热更新（HMR）`：开发时修改 `store` 代码，状态不丢失。
+- `SSR 支持`：开箱即用，可以在 Nuxt 3 等框架中无缝使用。
+1. 安装
+    ```bash
+      npm install pinia
+    ```
+2. 在 vue 项目中注册
+    ```js
+      //【 main.js 】
+      import { createApp } from 'vue';      // 引入createApp用于创建应用
+      import { createPinia } from 'pinia';  // 引入pinia
+      //import router from './router';      // 引入路由器
+      import App from './App.vue';          // 引入APP根组件
+
+      const app = createApp(App);
+      app.use(createPinia());               // 挂载 pinia 插件
+      //app.use(router);                    // 挂载 vue-router 插件
+      app.mount('#app');                    // 挂载整个应用到app容器中
+    ```
+3. 定义一个store
+    ```js
+      //【 stores/counter.js 】
+      //❗️每个 store 都是一个独立文件，用 defineStore 定义。
+      
+      import { defineStore } from 'pinia'
+      
+      export const useCounterStore = defineStore('counter', {
+        // ⚠️ state：相当于 data
+        state: () => ({
+          count: 0,
+          name: 'Pinia'
+        }),
+      
+        // ⚠️ getters：相当于 computed
+        getters: {
+          doubleCount: (state) => state.count * 2,
+        },
+      
+        // ⚠️ actions：相当于 methods
+        actions: {
+          increment() {
+            this.count++
+          },
+          setName(newName) {
+            this.name = newName
+          }
+        }
+      })
+    ```
+4. 在组件中使用
+    ```js
+      //❗️使用时 useXXXStore()，不需要提前注册
+      <script setup>
+      import { useCounterStore } from '@/stores/counter'
+      
+      const counter = useCounterStore()
+      
+      // ⚠️ 直接读写 state
+      console.log(counter.count)
+      counter.count++
+      
+      // ⚠️ 调用 action
+      counter.increment()
+      counter.setName('Vue3+Pinia')
+      </script>
+      
+      <template>
+        <div>
+          <p>{{ counter.count }}</p>
+          <p>{{ counter.doubleCount }}</p>
+          <button @click="counter.increment">增加</button>
+        </div>
+      </template>
+    ```
+---
+## React Router
+- `React Router`：社区/第三方（由 Remix 团队维护），不是 React 核心的一部分，但事实上的主流选择（在 React 中用 react-router-dom）
+- `Vue Router`：官方路由库，由 Vue 核心团队维护（Vue 3 对应 vue-router@4，Vue 2 对应 @3）
+- **`React Router` 用法**
+1. 安装
+    ```bash
+      npm i react-router-dom
+    ```
+2. “数据路由”写法（推荐 v6+）
+- 从 `v6.4` 起，`React Router` 引入了 `Data APIs`，把“路由匹配”和“数据获取/处理”统一管理，形成了：**路由配置 = 路径 + 组件 + 数据（loader/action）**
+    ```tsx
+      //【 src/main.tsx 】
+      import React from 'react'
+      import ReactDOM from 'react-dom/client'
+      import { // ⚠️
+        createBrowserRouter,
+        RouterProvider,
+        Link,
+        Outlet,
+        useLoaderData,
+        redirect,
+      } from 'react-router-dom' 
+      
+      function Layout() {
+        return (
+          <div>
+            <nav>
+              <Link to="/">Home</Link>{" "}
+              <Link to="/about">About</Link>{" "}
+              <Link to="/users/123">User 123</Link>
+            </nav>
+            <Outlet />
+          </div>
+        )
+      }
+      
+      function Home() { return <h1>Home</h1> }
+      
+      function About() { return <h1>About</h1> }
+      
+      function User() {
+        const data = useLoaderData() as { id: string; name: string }
+        return <h1>User #{data.id}: {data.name}</h1>
+      }
+      
+      const router = createBrowserRouter([
+        {
+          path: '/',
+          element: <Layout />,
+          children: [
+            { index: true, element: <Home /> },
+            { path: 'about', element: <About /> },
+            {
+              path: 'users/:id',
+              // ⚠️ 进入前获取数据/做权限判断
+              loader: async ({ params }) => {
+                const authed = true // 替换为你的鉴权逻辑
+                if (!authed) return redirect('/')
+      
+                // ⚠️ 真实项目里从 API 获取
+                return { id: params.id!, name: 'Alice' }
+              },
+              element: <User />,
+            },
+            { path: '*', element: <div>Not Found</div> },
+          ],
+        },
+      ])
+      
+      ReactDOM.createRoot(document.getElementById('root')!).render(
+        <React.StrictMode>
+          <RouterProvider router={router} />
+        </React.StrictMode>
+      )
+    ```
+---
+## Electron
+- `Electron` 其实就是把 `浏览器内核` + `Node.js` 拼在一起，做成桌面应用运行时
+- 可以在 `Electron` 里同时用`前端技术（HTML/CSS/JS）`和 `Node.js API`
+- 用一个`“主进程”`调度多个`“渲染进程”`，从而既能写`前端 UI`，又能用`本地文件/进程`等系统能力
 - classnames
 - styled-components
 - react-transition-group
@@ -10,15 +171,5 @@
 - ElementPlus
 - antd
 - normalize.css
-- react-router-dom
-- electron
-- Electron？（跨平台桌面应用开发框架）
 - IndexedDB
 
-Electron = Chromium (Blink+V8) + Node.js (V8+libuv)。
-
-它既有 渲染引擎（渲染页面 UI），也有 Node.js 的底层能力（文件系统、进程管理）。
-
-所以你可以在 Electron 里同时用前端技术（HTML/CSS/JS）和 Node.js API。
-
-Electron 其实就是把 浏览器内核 + Node.js 拼在一起，做成桌面应用运行时
