--- a/my-website/docs/0用到的库和工具.md
+++ b/my-website/docs/0用到的库和工具.md
@@ -231,7 +231,7 @@ title: 用到的插件和工具等
   - `WebGL`（`Web 图形库`）是一种 `JavaScript API`，用于在任何兼容的 `Web 浏览器`中无需插件即可渲染高性能的`交互式 3D 和 2D 图形`
 - 可以在网页里直接放一个`“虚拟地球”`，并且叠加自己的数据、模型、图层
 - 由美国 `AGI` 公司最早开发，有活跃的社区支持
- - [一个例子 - 在北京加了一个红点](./0用到的库和工具/CesiumJsTest.html)
+- [一个例子 - 在北京加了一个红点](../static/0用到的库和工具/CesiumJsTest.html)
 ---
 ## Echarts
 - `ECharts`（`Enterprise Charts`）是百度开源的可视化图表库，基于 `JavaScript` 和 `Canvas` 技术。
