--- a/my-website/docs/1计算机网络相关.md
+++ b/my-website/docs/1计算机网络相关.md
@@ -157,7 +157,7 @@ CDN = 反向代理服务器（`Reverse Proxy`） + 缓存（`Cache`）
    - CDN 的主要功能（内容缓存、HTTP/HTTPS 加速、动态内容路由）都发生在`应用层`
    - CDN 节点通常会优化 `TCP` 或 `QUIC 连接（基于 UDP 的传输层协议）` (`传输层`)
    - CDN 通过智能路由（`Anycast`、`DNS 负载均衡`）把用户请求导向最近节点（`Anycast` 等技术依赖 `IP 路由`，是`网络层`优化）
-- [CDN流程图解](./1计算机网络相关/CDN.png)
+- [CDN流程图解](../static/1计算机网络相关/CDN.png)
 ---
 ## 在浏览器里敲下网址并回车 —> 页面呈现
 `DNS（Domain Name System，域名系统）`= “互联网电话簿” | 把`域名（www.example.com）`解析成`IP 地址（93.184.216.34 或 IPv6）`
