--- a/my-website/docs/0用到的库和工具.md
+++ b/my-website/docs/0用到的库和工具.md
@@ -1,6 +1,6 @@
 ---
 id: 0
-title: 用到的插件和工具等
+title: 0-用到的插件和工具等
 ---
 
 # 📦 用到的插件和工具等
@@ -223,7 +223,6 @@ title: 用到的插件和工具等
 - **SCSS 的特点**
 - `SCSS` 是 `SASS` 的扩展语法，完全兼容 `CSS3`。它的语法与 `CSS` 非常相似，使用大括号 `{}` 和分号 `;` | 因此更容易被熟悉 `CSS` 的开发者接受。
 - `SCSS` 与 `CSS` 完全兼容，可以直接将 `.css` 文件重命名为 `.scss` 使用，而 `SASS` 不支持直接兼容 `CSS`
-
 ---
 ## CesiumJS
 - 一个开源的 `JavaScript` 库，用于在浏览器中展示 `3D 地球` 和 `2D 地图`
@@ -310,4 +309,8 @@ title: 用到的插件和工具等
   ```
 ---
 ## IndexedDB
-
+`IndexedDB` 是一种底层 `API`；用于在`客户端`存储大量的结构化数据（也包括文件/二进制大型对象（blobs））；该 `API` 使用索引实现对数据的高性能搜索； 虽然 `Web Storage` 在存储较少量的数据很有用 但对于存储更大量的结构化数据来说力不从心； 而 `IndexedDB` 提供了这种场景的解决方案
+- 一个基于 `JavaScript` 的面向对象数据库
+- 允许存储和检索`用键索引的对象`；可以存储结构化克隆算法支持的任何对象
+- 只需要指定数据库模式，打开与数据库的连接，然后检索和更新一系列事务
+---
