--- a/my-website/docs/9前端工程化.md
+++ b/my-website/docs/9前端工程化.md
@@ -88,3 +88,30 @@ title: 9-前端工程化
 - `Tree Shaking` | 就是打包时移除没有用到的代码
 - `ES Modules`是异步的｜加载特点：**(1)** 浏览器遇到 `<script type="module">` 会异步下载和解析依赖，不会阻塞 `HTML` 渲染。**(2)** `import` 本身是静态声明，但浏览器执行时会异步请求依赖文件（走网络）
 - `CommonJS 特点`是同步的｜加载特点：**(1)** 用 `require` 引入模块：执行到这一行时，必须立刻去磁盘（或缓存）加载并执行 math.js，然后才往下走。所以 `require` 是阻塞式的同步操作。**(2)** CommonJS 设计场景是 Node.js 服务器，本地磁盘 IO 很快，不需要异步。**(3)** 如果放在浏览器里，require 就很慢（要阻塞等待整个模块加载），所以 CJS 不适合浏览器端直接使用。
+---
+## WASM（WebAssembly）
+- `WASM`（`WebAssembly`）是一种**高效的、低级别的二进制格式**，用于在浏览器中运行代码。
+- 是一种与平台无关的技术，设计目标是让开发者能够**将高性能代码运行在浏览器中**，同时具有接近原生的性能表现。
+- `WebAssembly` 可以被看作是浏览器的`“虚拟机语言”`，它允许开发者将用其他编程语言（如 `C`、`C++`、`Rust` 等）编写的代码编译成**二进制格式**，然后在浏览器中运行。
+- 这种方式突破了传统 `JavaScript` 的性能瓶颈，特别适合需要高性能计算的场景，比如**游戏、图像处理、视频编辑、科学计算等**。
+- 1️⃣ **【 `WASM` 的核心特点 】**
+  - **高性能：**| `WebAssembly` 是一种**二进制格式**，运行时直接被浏览器的 `WebAssembly` 虚拟机加载和执行，省去了 `JavaScript` 的解析和编译步骤。 | 接近原生性能（Native Performance），适用于需要大量计算的场景。
+  - **跨平台：**| `WebAssembly` 是**与平台无关**的，可以在任何支持 `WebAssembly` 的环境中运行，包括`主流浏览器`（`Chrome`、`Firefox`、`Safari`、`Edge`）和 `Node.js`。
+  - **语言无关：**| `WebAssembly` 是一种**编译目标**，可以通过编译器（如 `LLVM`）将多种编程语言（如 `C`、`C++`、`Rust`、`Go` 等）编译成 `WebAssembly`。
+  - **安全性：**| `WebAssembly` 运行在**沙盒环境**中，遵循浏览器的安全模型，无法直接访问底层操作系统资源，安全性高。
+  - **模块化：**| `WebAssembly` 支持**模块化设计**，可以与 `JavaScript` 进行高效交互，适合构建复杂的应用程序。
+- 2️⃣ **【 `WASM` 的文件结构 】**
+  - `WebAssembly` 的核心是 `.wasm` 文件，它是一种**紧凑的二进制格式**，包含以下内容：
+  - **模块：**| `WebAssembly` 的代码组织单位是**模块**，**一个模块**可以包含**多个函数、内存定义、全局变量等**。
+  - **导入和导出：**| `WebAssembly` 模块可以导入外部资源（如 JavaScript 函数），也可以导出自己的函数供 JavaScript 使用。
+  - **指令集：**| `WebAssembly` 使用简单的、低级指令集，适合直接翻译成机器代码。
+- 3️⃣ **【 WebAssembly 与 JavaScript 的关系 】**
+  - `WebAssembly` 并不是 JavaScript 的替代品，而是两者的互补，它专注于高性能计算
+  - `JavaScript` 仍然是构建用户界面的首选语言。
+
+  |特性|WebAssembly|JavaScript|
+  |---|---|---|
+  |性能|	    接近原生性能|	              较慢（解释型语言）|
+  |编程语言|	支持多种语言（如 C、Rust）|	    只能使用 JavaScript|
+  |可读性|	    二进制文件，不易阅读|	        可读性高（文本格式）|
+  |应用场景|	**高性能计算、游戏、科学计算**|	  **用户界面、业务逻辑**|
